force-app/main/default/objects/DemandPlanning__c/DemandPlanning__c.object-meta.xml
<CustomObject>
    <label>Demand Planning</label>
    <nameField>
        <displayFormat>DP-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Demand Plan No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>