force-app/main/default/objects/DemandPlanning__c/fields/Diff10__c.field-meta.xml
<CustomField>
    <fullName>Diff10__c</fullName>
    <label>Oct-Diff</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>