force-app/main/default/objects/DemandPlanning__c/fields/Diff11__c.field-meta.xml
<CustomField>
    <fullName>Diff11__c</fullName>
    <label>Nov-Diff</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>