force-app/main/default/objects/DemandPlanning__c/fields/Diff12__c.field-meta.xml
<CustomField>
    <fullName>Diff12__c</fullName>
    <label>Dec-Diff</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>