force-app/main/default/objects/DemandPlanning__c/fields/DPAccountName__c.field-meta.xml
<CustomField>
    <fullName>DPAccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demand Planning</relationshipLabel>
    <relationshipName>DPAccountName</relationshipName>
    <type>Lookup</type>
</CustomField>