force-app/main/default/objects/DemandPlanning__c/fields/FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>FiscalYear__c</fullName>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY12</fullName>
                <default>true</default>
                <label>FY12</label>
            </value>
            <value>
                <fullName>FY13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>