force-app/main/default/objects/DemandPlanning__c/fields/Plan10__c.field-meta.xml
<CustomField>
    <fullName>Plan10__c</fullName>
    <label>Oct-Plan</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>