force-app/main/default/objects/DemandPlanning__c/fields/Plan11__c.field-meta.xml
<CustomField>
    <fullName>Plan11__c</fullName>
    <label>Nov-Plan</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>