force-app/main/default/objects/DemandPlanning__c/fields/Plan12__c.field-meta.xml
<CustomField>
    <fullName>Plan12__c</fullName>
    <label>Dec-Plan</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>