force-app/main/default/objects/DemandPlanning__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sheet</fullName>
            </value>
            <value>
                <fullName>Plank</fullName>
            </value>
            <value>
                <fullName>Steel Pipe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>