force-app/main/default/objects/DemandPlanning__c/fields/Result10__c.field-meta.xml
<CustomField>
    <fullName>Result10__c</fullName>
    <label>Oct-Result</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>