force-app/main/default/objects/DemandPlanning__c/fields/Result11__c.field-meta.xml
<CustomField>
    <fullName>Result11__c</fullName>
    <label>Nov-Result</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>