force-app/main/default/objects/DemandPlanning__c/fields/Result12__c.field-meta.xml
<CustomField>
    <fullName>Result12__c</fullName>
    <label>Dec-Result</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>